--- a/assets/login/styles.css
+++ b/assets/login/styles.css
@@ -1,3 +1,31 @@
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Oxygen:wght@300;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Serif+HK:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Raleway");
+@import url("https://fonts.googleapis.com/css?family=Roboto");
+@import url("https://fonts.googleapis.com/css2?family=Qwitcher+Grypen:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Nothing+You+Could+Do&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  list-style: none;
+}
+a {
+  text-decoration: none;
+}
+
+:root {
+  text-align: center;
+  --josefin400: "Josefin Sans", sans-serif;
+  --oxygen700: "Oxygen", sans-serif;
+  --oxygen300: "Oxygen", sans-serif;
+  --noto700: "Noto Serif HK", serif;
+  --cursiva700: "Qwitcher Grypen";
+  --blanco: rgba(206, 206, 206, 0.904);
+}
 body {
   display: flex;
   justify-content: center;
@@ -5,6 +33,9 @@ body {
   text-align: center;
   height: 100vh;
   width: 100vw;
+  flex-flow: row wrap;
+  gap: 20px;
+  padding: 10px;
 }
 .btn {
   width: 120px;
@@ -45,4 +76,73 @@ body {
 
 .home a i {
   color: white;
+}
+/* FOOTER */
+footer {
+  margin-top: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 40px;
+  padding: 30px;
+}
+
+.footer-links {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+}
+
+footer a {
+  color: black;
+  font-size: 14px;
+  font-family: var(--josefin400);
+}
+
+.container-contact-iframe {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-flow: row wrap;
+  gap: 20px;
+  width: 100%;
+}
+.container-contact {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: column wrap;
+
+  gap: 5px;
+  font-family: var(--josefin400);
+}
+.container-web {
+  display: flex;
+  justify-content: center;
+  flex-flow: row wrap;
+  gap: 5px;
+}
+
+iframe {
+  border-radius: 15px;
+  width: 100%;
+}
+.login-container {
+  padding: 10px;
+}
+
+footer,
+.login-container {
+  border: 1px solid black;
+  border-radius: 15px;
+  backdrop-filter: blur(10px);
+}
+#myVideo {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
+  z-index: -1;
 }
